# CruzerDog

./: ReadME.md  path.csv  path_1.csv  path_2.csv  plot_path.m  ros_ip.sh  untitled2.m
main_controller/: CMakeLists.txt  package.xml
main_controller/include/: cpptypes.h  defination.h  eigen_types.h
main_controller/include/Convex_MPC/: ConvexMPC.h  MConvexMPC.h
main_controller/include/FSM/: FSM_ctrl.h  FSM_data.h  FSM_state.h  FSM_tpcl.h  FiniteStateMachine.h  safety_check.h
main_controller/include/FSM/State_Worker/: Locomotion_Worker.h  Stand_Worker.h  State_Worker.h  Steady_Worker.h
main_controller/include/Leg_Control/: FootSwingTrajectory.h  Gait.h  Interpolation.h  Leg_Control.h
main_controller/include/Math_tools/: orientation_tools.h
main_controller/include/Robot/: KinematicModel.h  LegKinematics_unitree.h  Robot.h
main_controller/include/State_Estimator/: A1BasicEKF.h  PositionVelocityEstimator.h  orientation_estimator.h  state_estimator.h
main_controller/launch/: main_controller.launch
main_controller/src/: main_ctrl.cpp  test.cpp
main_controller/src/Convex_MPC/: ConvexMPC.cpp  MConvexMPC.cpp
main_controller/src/FSM/: FSM_ctrl.cpp  FSM_data.cpp  FSM_state.cpp  FSM_tpcl.cpp  FiniteStateMachine.cpp  safety_check.cpp
main_controller/src/FSM/State_Worker/: Locomotion_Worker.cpp  Stand_Worker.cpp  State_Worker.cpp  Steady_Worker.cpp
main_controller/src/Leg_Control/: Foot_Swing_Trajectory.cpp  Gait.cpp  Leg_Control.cpp
main_controller/src/Math_tools/: orientation_tools.cpp
main_controller/src/Robot/: KinematicModel.cpp  LegKinematics_unitree.cpp  Robot.cpp
main_controller/src/State_Estimator/: A1BasicEKF.cpp  state_estimator.cpp
wtr_serial/: CMakeLists.txt
wtr_serial/launch/: serial.launch
wtr_serial/src/: wtr_serial.cpp
