<?xml version="1.0"?>
<package format="2">
  <name>main_ctrl</name>
  <version>0.0.0</version>
  <description>The main_ctrl package</description>
  <maintainer email="holmes@todo.todo">holmes</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>unitree_legged_msgs</depend>
  <depend>wtr_serial_msg</depend>
  <export>
  </export>
</package>
